--- a/atoms/TCard.css
+++ b/atoms/TCard.css
@@ -39,6 +39,7 @@
   color: #757575;
   margin-bottom: 0 !important;
   font-size: 16px;
+  margin-bottom: 16px;
   line-height: 24px;
 }
 
@@ -52,7 +53,6 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
-  margin-top: 32px;
   max-height: 60px;
   overflow: hidden;
   letter-spacing: 0.25px;
