--- a/atoms/TCard.css
+++ b/atoms/TCard.css
@@ -1,32 +1,29 @@
 .team-card {
-  border-radius: 12px;
+  border-radius: 4px;
   width: 305px !important;
   cursor: pointer;
   transition: transform 0.2s;
-  padding: 32px 24px;
+  padding: 16px 24px;
   transform: translateY(0px);
+  border: 1px solid #dddddd !important;
 }
 
-.team-card:hover {
-  transform: translateY(-10px);
-  transition: transform 0.2s;
-}
 .team-card__logo {
   border-radius: 360px;
   height: 56px;
   width: 56px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   background-size: cover;
   background-size: cover;
   background-position: center center;
 }
 
 .team-card__title {
-  font-family: Gilroy, sans-serif;
+  font-family: Gilroy, sans-serif !important;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 26px;
-  line-height: 41px;
+  line-height: 33px;
   margin-bottom: 16px;
   letter-spacing: 0.25px;
 }
@@ -80,4 +77,25 @@
 .squared__col .team-card__logo {
   width: 60px;
   height: 60px;
+}
+
+@media (max-width: 960px) {
+  .team-card {
+    width: 100% !important;
+  }
+
+  .team-card__title {
+    margin-bottom: 4px;
+  }
+
+  .team-card__holder {
+    width: 100%;
+  }
+}
+
+@media (max-width: 320px) {
+  .team-card {
+    min-width: 230px;
+    width: 100% !important;
+  }
 }
